Helm_TodoAppMicro_Services/Add_Task_TodoApplication/manifests_old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: add-task
        image: containerregistry4dec2024.azurecr.io/addtask:v1
        ports:
        - containerPort: 8000
