Helm_TodoAppMicro_Services/Add_Task_TodoApplication/manifests_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: add-task-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: add-task.raghavcorporation.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: add-task
            port: 
              number: 80
